# automated-python-tests-testing-repo

./: README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
src/building/: building.py
tests/: test_building.py
