[metadata]
name = building
description = Create your own house
author = Me
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming language :: Python :: 3
    Programming language :: Python :: 3 :: Only
    Programming language :: Python :: 3.6
    Programming language :: Python :: 3.7
    Programming language :: Python :: 3.8
    Programming language :: Python :: 3.9

[options]
packages = building
install_requires = requests>=2
python_requires = >=3.6
package_dir = =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
building=py.typed

[flake8]
max-line-length = 160